<resources>
    <string name="app_name">Strength Coach</string>
    <string name="phone_verification_text">Enter verification code</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_phone_no_verification">Phone Number Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="name">Full Name</string>
    <string name="signup">Sign Up</string>
    <string name="verify_button_text">Verify</string>
    <string name="regenerate_code">Resend Code</string>
    <string name="title_activity_block_slot">Book Slot</string>
    <string name="title_activity_payment">Payment</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_trainer_details">TrainerDetailsActivity</string>
    <string name="about_me_header">About</string>
    <string name="trainer_education_header">Education and Certifications</string>
    <string name="trainer_achievements_header">Interests and Achievements</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="select_slot">Available Slots</string>
    <string name="payment">Proceed to Payment</string>
    <string name="mobile_no_label">Phone No</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="cc_number">Number</string>
    <string name="cc_number_hint">1234 1234 1234 1234</string>
    <string name="cc_expiry">Expiry</string>
    <string name="cc_expiry_hint">mm / yy</string>
    <string name="scan_card">Scan card</string>
    <string name="enter_manually">Enter your credit card details</string>
    <string name="ok">OK</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="progressMessage">Creating Token</string>
    <string name="bSubmit">Submit</string>
    <string name="not_saved">Card not saved</string>

    <string name="button_block_time">Book Slot</string>
    <string name="facebook_app_id">1596268773980430</string>

    <string name="cart">Add To Cart</string>
    <string name="next">Next > </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_cart">Cart </string>
    <string name="delete">Delete </string>
    <string name="sno">S.No </string>
    <string name="trainer">Trainer </string>
    <string name="slot_date">Date </string>
    <string name="slot_time">Time </string>
    <string name="or">(or) </string>

    <string name="title_activity_upcoming_events">Upcoming Workout Events</string>
    <string name="bookmoreslots">Book Slots</string>
    <string name="home">Home</string>
    <string name="select_time_slot">Select time slot</string>
    <string name="title_activity_trainer_details_animated">TrainerDetailsAnimatedActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="priceperhour">$/hr </string>
    <string name="total">Total </string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Sign Up</item>
        <item>Home</item>
        <item>Map</item>
        <item>Search</item>
        <item>Messages</item>
        <item>Favorites</item>
        <item>Write Review</item>
        <item>Invite Friends</item>
        <item>Settings</item>
        <item>Sign Out</item>
        <item>Report a bug</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_signup</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_map_blue</item>
        <item>@drawable/ic_search</item>
        <item>@drawable/ic_message</item>
        <item>@drawable/ic_fav_drawer</item>
        <item>@drawable/ic_write_review</item>
        <item>@drawable/ic_social</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_signup</item>
        <item>@drawable/ic_bug</item>
    </array>


    <string name="regenerate_code_underline"><u>Regenerate Code</u></string>
    <string name="app_caption">Discover the power of personal training</string>
    <string name="skip">Skip Sign Up</string>
    <string name="trainerscount">1,000+\nTrainers</string>
    <string name="userscount">10,000+\nUsers</string>

    <string name="checkout">Checkout</string>
    <string name="book_slot_dialog_title">Select time</string>
    <string name="positive_text">Add to cart</string>
    <string name="pick_date">Pick an available date</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_card_scanned">CardScannedActivity</string>
    <string name="success_message">Payment Received</string>

</resources>
