<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:weightSum="5">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sno"
        android:id="@+id/tvHeaderSerialNo"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/delete"
        android:id="@+id/tvHeaderDelete"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/tvHeaderSerialNo"
        android:layout_marginRight="@dimen/margin_20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainer"
        android:id="@+id/tvHeaderTrainerName"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/tvHeaderDelete"
        android:layout_marginRight="@dimen/margin_20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_date"
        android:id="@+id/tvHeaderSlotDate"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/tvHeaderTrainerName"
        android:layout_marginRight="@dimen/margin_20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_time"
        android:id="@+id/tvHeaderSlotTime"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/tvHeaderSlotDate"
        android:layout_marginRight="@dimen/margin_10dp"/>


</LinearLayout>