<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:weightSum="5"
    android:background="@color/white">
    <com.strengthcoach.strengthcoach.customui.RobotoTextView
        android:layout_width="@dimen/margin_20dp"
        android:layout_height="@dimen/margin_55dp"
        android:text="@string/sno"
        android:id="@+id/tvSerialNo"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"
        android:layout_weight="0.46"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:gravity="center"/>

    <com.strengthcoach.strengthcoach.customui.RobotoTextView
        android:layout_width="90dp"
        android:layout_height="@dimen/margin_55dp"
        android:text="@string/trainer"
        android:id="@+id/tvTrainerName"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"
        android:layout_weight="1.5"
        android:layout_toRightOf="@+id/ibDelete"
        android:layout_marginRight="@dimen/margin_20dp"
        android:gravity="center"/>

    <com.strengthcoach.strengthcoach.customui.RobotoTextView
        android:layout_width="@dimen/margin_70dp"
        android:layout_height="@dimen/margin_55dp"
        android:text="@string/slot_date"
        android:id="@+id/tvSlotDate"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"
        android:layout_weight="1.5"
        android:layout_toRightOf="@+id/tvTrainerName"
        android:layout_marginRight="@dimen/margin_20dp"
        android:gravity="center"/>

    <com.strengthcoach.strengthcoach.customui.RobotoTextView
        android:layout_width="@dimen/margin_42dp"
        android:layout_height="@dimen/margin_55dp"
        android:text="@string/slot_time"
        android:id="@+id/tvSlotTime"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"
        android:layout_weight="0.5"
        android:layout_toRightOf="@+id/tvSlotDate"
        android:layout_marginRight="@dimen/margin_10dp"
        android:gravity="center"/>

</LinearLayout>