<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.strengthcoach.strengthcoach.activities.PaymentActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/rippleScanCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/margin_60dp"
        android:layout_marginBottom="@dimen/margin_60dp"
        android:layout_centerHorizontal="true"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleRoundedCorners="10dp">
        <Button
            android:id="@+id/scanButton"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/primary_blue_button"
            android:textSize="18sp"
            android:onClick="onScanClick"
            android:text="@string/scan_card"/>
    </com.balysv.materialripple.MaterialRippleLayout>

    <LinearLayout
        android:id="@+id/divScanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rippleScanCard"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_weight="1"
            android:background="@color/gray" />

        <com.strengthcoach.strengthcoach.customui.RobotoTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_weight="1"
            android:background="@color/gray" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divScanButton">

        <com.strengthcoach.strengthcoach.customui.RobotoTextView
            android:id="@+id/tvEnterManually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="20dp"
            android:text="@string/enter_manually"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

        <com.strengthcoach.strengthcoach.customui.RobotoTextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvEnterManually"
            android:layout_marginTop="45dp"
            android:paddingEnd="@dimen/margin_10dp"
            android:paddingLeft="@dimen/margin_42dp"
            android:paddingRight="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp"
            android:text="@string/cc_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/etCCNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvCardNumber"
            android:layout_toEndOf="@+id/tvCardNumber"
            android:layout_toRightOf="@+id/tvCardNumber"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/cc_number_hint"
            android:inputType="number"
            android:maxLength="19"
            android:paddingBottom="@dimen/margin_10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHighlight"
            android:textCursorDrawable="@drawable/cursor_color" />


        <com.strengthcoach.strengthcoach.customui.RobotoTextView
            android:id="@+id/tvExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etCCNumber"
            android:paddingEnd="@dimen/margin_10dp"
            android:paddingLeft="@dimen/margin_42dp"
            android:paddingRight="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp"
            android:text="@string/cc_expiry"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_15sp" />

        <EditText
            android:id="@+id/etExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etCCNumber"
            android:layout_alignStart="@+id/etCCNumber"
            android:layout_below="@+id/etCCNumber"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/cc_expiry_hint"
            android:inputType="date"
            android:paddingBottom="@dimen/margin_20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHighlight"
            android:textCursorDrawable="@drawable/cursor_color" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="10dp">

            <Button
                android:id="@+id/bSubmit"
                style="@style/activityTransitionButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_60dp"
                android:text="@string/bSubmit" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </RelativeLayout>
</RelativeLayout>
