<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.strengthcoach.strengthcoach.activities.PhoneNoVerificationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.strengthcoach.strengthcoach.customui.RobotoTextView
        android:id="@+id/verificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_90dp"
        android:text="@string/phone_verification_text" />

    <com.strengthcoach.strengthcoach.customui.RobotoTextView
        android:id="@+id/tvVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/verificationText"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginTop="20dp"
        android:text="@string/verification_code" />

    <EditText
        android:id="@+id/etVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verificationText"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_toEndOf="@+id/tvVerificationCode"
        android:layout_toRightOf="@+id/tvVerificationCode"
        android:background="@drawable/custom_edit_text"
        android:ems="4"
        android:focusable="true"
        android:inputType="number"
        android:maxLength="4"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="@dimen/textsize_15sp" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verificationText"
        android:layout_toRightOf="@+id/etVerificationCode"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleRoundedCorners="10dp">

        <Button
            android:id="@+id/bVerify"
            style="@style/customButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_button_text" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <TextView
        android:id="@+id/bRegenerateCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etVerificationCode"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="callRegenerateCode"
        android:text="@string/regenerate_code_underline"
        android:textColor="@color/hyperlinkColor" />
</RelativeLayout>
