<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.strengthcoach.strengthcoach.activities.BlockSlotActivity">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/llCalendar"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <FrameLayout
                android:id="@+id/flCalendar"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"></FrameLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llCalendar">

            <TextView
                android:id="@+id/tvSelectSlot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="47dp"
                android:text="@string/select_slot" />

            <Spinner
                android:id="@+id/spSelectSlot"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvSelectSlot"
                android:layout_toRightOf="@+id/tvSelectSlot"
                android:prompt="@string/select_slot" />

            <Button
                android:id="@+id/bAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/spSelectSlot"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/spSelectSlot"
                android:layout_toRightOf="@+id/spSelectSlot"
                android:text="@string/cart" />

            <Button
                android:id="@+id/bProceedToPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/bAddToCart"
                android:layout_marginTop="45dp"
                android:text="@string/next"
                android:visibility="gone"
                android:layout_marginRight="@dimen/margin_10dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>